# krpc-core

./: .bazelrc  .gitignore  BUILD.bazel  KRPC.Core.sln  README.md  WORKSPACE.bazel  config.bzl  paket.dependencies  workspace.bzl
.github/actions/bazel-fetch/: action.yml
.github/actions/ksp-lib/: action.yml
.github/actions/upload-artifact/: action.yml
.github/workflows/: ci.yml
core/: BUILD.bazel
core/src/: AssemblyInfo.cs.tmpl  Configuration.cs  Core.cs  KRPC.Core.csproj
core/src/Server/: ByteOutputAdapterStream.cs  ClientActivityEventArgs.cs  ClientConnectedEventArgs.cs  ClientConnectionRequest.cs  ClientDisconnectedEventArgs.cs  ClientDisconnectedException.cs  ClientEventArgs.cs  ClientRequestingConnectionEventArgs.cs  IClient.cs  IServer.cs  IStream.cs  NullServer.cs  Protocol.cs  Server.cs  ServerEventArgs.cs  ServerException.cs  ServerStartedEventArgs.cs  ServerStoppedEventArgs.cs
core/src/Server/HTTP/: MalformedRequestException.cs  Request.cs  Response.cs
core/src/Server/Message/: MalformedRequestException.cs  NoRequestException.cs  RPCClient.cs  RPCServer.cs  RPCStream.cs  StreamClient.cs  StreamServer.cs  StreamStream.cs
core/src/Server/ProtocolBuffers/: Encoder.cs  MessageExtensions.cs  RPCClient.cs  RPCServer.cs  RPCStream.cs  StreamClient.cs  StreamServer.cs  StreamStream.cs  Utils.cs
core/src/Server/SerialIO/: ByteClient.cs  ByteServer.cs  ByteStream.cs  RPCClient.cs  RPCServer.cs  RPCStream.cs  StreamServer.cs
core/src/Server/TCP/: NetworkInformation.cs  TCPClient.cs  TCPServer.cs  TCPStream.cs
core/src/Server/WebSockets/: ConnectionRequest.cs  Frame.cs  FramingException.cs  HandshakeException.cs  Header.cs  OpCode.cs  RPCClient.cs  RPCServer.cs  RPCStream.cs  StreamClient.cs  StreamServer.cs  StreamStream.cs
core/src/Service/: CallContext.cs  ClassMethodHandler.cs  ClassStaticMethodHandler.cs  DocumentationException.cs  DocumentationUtils.cs  Event.cs  EventStream.cs  GameScene.cs  IProcedureHandler.cs  ObjectStore.cs  ProcedureCallContinuation.cs  ProcedureCallStream.cs  ProcedureHandler.cs  ProcedureParameter.cs  RPCException.cs  RequestContinuation.cs  ServiceException.cs  Services.cs  Stream.cs  StreamContinuation.cs  TypeUtils.cs  ValueUtils.cs  YieldException.cs
core/src/Service/Attributes/: KRPCClassAttribute.cs  KRPCDefaultValueAttribute.cs  KRPCEnumAttribute.cs  KRPCExceptionAttribute.cs  KRPCMethodAttribute.cs  KRPCNullableAttribute.cs  KRPCProcedureAttribute.cs  KRPCPropertyAttribute.cs  KRPCServiceAttribute.cs
core/src/Service/KRPC/: ArgumentException.cs  ArgumentNullException.cs  ArgumentOutOfRangeException.cs  Expression.cs  InvalidOperationException.cs  KRPC.cs  Type.cs
core/src/Service/Messages/: Argument.cs  Class.cs  Enumeration.cs  EnumerationValue.cs  Error.cs  Event.cs  Exception.cs  IMessage.cs  NoMessage.cs  Parameter.cs  Procedure.cs  ProcedureCall.cs  ProcedureResult.cs  Request.cs  Response.cs  Service.cs  Services.cs  Status.cs  Stream.cs  StreamResult.cs  StreamUpdate.cs
core/src/Service/Scanner/: ClassSignature.cs  EnumerationSignature.cs  EnumerationValueSignature.cs  ExceptionSignature.cs  ParameterSignature.cs  ProcedureSignature.cs  Scanner.cs  ServiceSignature.cs
core/src/Utils/: DictionaryExtensions.cs  DocumentationExtensions.cs  DynamicBuffer.cs  Equatable.cs  EventHandlerExtensions.cs  ExponentialMovingAverage.cs  IScheduler.cs  Logger.cs  Reflection.cs  RoundRobinScheduler.cs  StopwatchExtensions.cs  Text.cs
core/test/: ConfigurationTest.cs  KRPC.Core.Test.csproj  TestingTools.cs
core/test/Server/: ClientRequestingConnectionArgsTest.cs  TestClient.cs  TestStream.cs
core/test/Server/HTTP/: RequestTest.cs  ResponseTest.cs
core/test/Server/ProtocolBuffers/: EncoderTest.cs  RPCServerTest.cs  RPCStreamTest.cs  SchemaTest.cs  StreamServerTest.cs  StreamStreamTest.cs  TestingTools.cs
core/test/Server/SerialIO/: ByteClientTest.cs  RPCServerTest.cs  RPCStreamTest.cs  TestingTools.cs
core/test/Server/TCP/: AssumptionsTest.cs  NetworkInformationTest.cs  TCPClientTest.cs  TCPServerTest.cs
core/test/Server/WebSockets/: FrameTest.cs  HeaderTest.cs  RPCServerTest.cs  RPCStreamTest.cs  StreamServerTest.cs  StreamStreamTest.cs
core/test/Service/: ClassMethodHandlerTest.cs  DocumentationUtilsTest.cs  GameSceneTest.cs  ITestService.cs  MessageAssert.cs  ObjectStoreTest.cs  ProcedureHandlerTest.cs  ProcedureParameterTest.cs  ScannerTest.cs  ServicesTest.cs  TestService.cs  TestService2.cs  TestService3.cs  TestTopLevelClass.cs  TypeUtilsTest.cs  ValueUtilsTest.cs
core/test/Service/KRPC/: ExpressionTest.cs  KRPCTest.cs
core/test/Utils/: DocumentationExtensionsTest.cs  DynamicBufferTest.cs  EquatableTest.cs  ReflectionTest.cs  RoundRobinSchedulerTest.cs
protobuf/: BUILD.bazel
tools/: bazel-lint.sh  build-csproj.sh  paket-install.sh  paket-update.sh
tools/ServiceDefinitions/: BUILD.bazel  defs.bzl
tools/TestServer/: BUILD.bazel
tools/TestServer/src/: AssemblyInfo.cs.tmpl
tools/buildenv/: CHANGES.txt  Dockerfile  Makefile
tools/docker/: CHANGES.txt  Dockerfile  Makefile
tools/service_definitions/: BUILD.bazel  defs.bzl
tools/service_definitions/src/: AssemblyInfo.cs.tmpl  Program.cs  ServiceDefinitions.csproj
tools/test_server/: BUILD.bazel  README.md
tools/test_server/src/: Program.cs  ServiceAssemblyInfo.cs.tmpl  TestServer.csproj  TestService.cs
