load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("@rules_dotnet//dotnet:defs.bzl", "csharp_library", "csharp_nunit_test")
load("//tools/ServiceDefinitions:defs.bzl", "service_definitions")
load("//:config.bzl", "version")

filegroup(
    name = "core",
    srcs = [
        ":krpc_core",
        # ":service_definitions",
    ],
)

test_suite(
    name = "test",
    tests = [
        ":krpc_core_test",
        ":lint",
    ],
)

test_suite(
    name = "lint",
    # TODO: use dotnet analyzers and dotnet format
    tests = [],
)

csharp_library(
    name = "krpc_core",
    srcs = [":krpc_core_info"] + glob(["src/**/*.cs"]) + ["//protobuf:krpc_csharp"],
    out = "KRPC.Core",
    private_deps = [
        "@paket.nuget_deps//netstandard.library.ref",
    ],
    target_frameworks = ["netstandard2.1"],  # TODO: should be netstandard2.0
    treat_warnings_as_errors = True,
    visibility = ["//visibility:public"],
    warning_level = 4,
    deps = [
        "//:Google.Protobuf",
        "//:KRPC.IO.Ports",
    ],
)

expand_template(
    name = "krpc_core_info",
    out = "src/AssemblyInfo.cs",
    substitutions = {"{VERSION}": version},
    template = "src/AssemblyInfo.cs.tmpl",
    visibility = ["//visibility:public"],
)

# TODO: enable service definitions once this is resolved
# https://github.com/bazelbuild/rules_dotnet/issues/347
# service_definitions(
#     name = 'service_definitions',
#     srcs = [':krpc_core'],
#     service = 'KRPC',
#     out = 'KRPC.Core.json',
#     visibility = ['//visibility:public']
# )

csharp_nunit_test(
    name = "krpc_core_test",
    srcs = glob(["test/**/*.cs"]),
    out = "KRPC.Core.Test",
    private_deps = [
        "@paket.nuget_deps//microsoft.netcore.app.ref",
    ],
    target_frameworks = ["net6.0"],
    treat_warnings_as_errors = True,
    warning_level = 4,
    warnings_not_as_errors = ["CS1591"],
    deps = [
        ":krpc_core",
        "//:Google.Protobuf",
        "//:KRPC.IO.Ports",
        "@paket.nuget_deps//moq",
        "@paket.nuget_deps//newtonsoft.json",
    ],
)
