load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("@rules_dotnet//dotnet:defs.bzl", "csharp_binary")
load("//:config.bzl", "version")

csharp_binary(
    name = 'ServiceDefinitions',
    srcs =  glob(['**/*.cs']) + [':service_definitions_info'],
    deps = [
        "//core:krpc_core",
        "//:Google.Protobuf",
        "//:KRPC.IO.Ports",
        "@paket.nuget_deps//moq",
        "@paket.nuget_deps//newtonsoft.json",
        "//:NDesk.Options",
    ],
    target_frameworks = ["net6.0"],
    private_deps = [
        "@paket.nuget_deps//microsoft.netcore.app.ref",
    ],
    treat_warnings_as_errors = True,
    warning_level = 4,
    visibility = ['//visibility:public']
)

expand_template(
    name = "service_definitions_info",
    out = "src/AssemblyInfo.cs",
    substitutions = {
        "{VERSION}": version,
    },
    template = "src/AssemblyInfo.cs.tmpl",
    visibility = ["//visibility:public"],
)
