load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("@rules_dotnet//dotnet:defs.bzl", "csharp_binary", "csharp_library", "publish_binary")
load("@rules_pkg//pkg:pkg.bzl", "pkg_zip")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load("//tools/service_definitions:defs.bzl", "service_definitions")
load("//:config.bzl", "version")

csharp_binary(
    name = "test_server",
    srcs = [
        "src/Program.cs",
        "src/TestService.cs",
        ":assembly_info",
    ],
    out = "TestServer",
    private_deps = ["@paket.nuget_deps//microsoft.netcore.app.ref"],
    target_frameworks = ["net6.0"],
    treat_warnings_as_errors = True,
    visibility = ["//visibility:public"],
    warning_level = 4,
    warnings_not_as_errors = ["CS1591"],
    deps = [
        "//:google_protobuf",
        "//:krpc_io_ports",
        "//:ndesk_options",
        "//core",
    ],
)

expand_template(
    name = "assembly_info",
    out = "src/AssemblyInfo.cs",
    substitutions = {"{VERSION}": version},
    template = "src/AssemblyInfo.cs.tmpl",
    visibility = ["//visibility:public"],
)

csharp_library(
    name = "test_service",
    srcs = [
        "src/TestService.cs",
        ":service_assembly_info",
    ],
    out = "TestService",
    private_deps = ["@paket.nuget_deps//netstandard.library.ref"],
    target_frameworks = ["netstandard2.1"],
    treat_warnings_as_errors = True,
    warning_level = 4,
    warnings_not_as_errors = ["CS1591"],
    deps = ["//core"],
)

expand_template(
    name = "service_assembly_info",
    out = "src/ServiceAssemblyInfo.cs",
    substitutions = {"{VERSION}": version},
    template = "src/ServiceAssemblyInfo.cs.tmpl",
    visibility = ["//visibility:public"],
)

service_definitions(
    name = "service_definitions",
    srcs = [
        ":test_service",
        "//core",
    ],
    out = "TestService.json",
    service = "TestService",
    visibility = ["//visibility:public"],
)

# FIXME: remove .json files
# FIXME: include readme
# FIXME: include correct license
pkg_zip(
    name = "archive",
    out = "TestServer-%s.zip" % version,
    srcs = [":archive_files", ":README.md"],
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "archive_files",
    srcs = [":binary_files"],
    strip_prefix = strip_prefix.files_only()
)

publish_binary(
    name = "binary_files",
    binary = ":test_server",
    target_framework = "net6.0",
)
